Add localization for app name "SENAR" in Arabic and English

--- a/assets/translations/ar-SA.json
+++ b/assets/translations/ar-SA.json
@@ -1,6 +1,6 @@
 {
   "lang": "ar",
-  "app_name": "النصيان للغاز",
+  "app_name": "سينار",
   "sorry_something_went_wrong": "آسف، حدث خطأ",
   "something_went_wrong_please_try_again": "حدث خطأ. يرجى المحاولة مرة أخرى",
   "the_login_session_has_expired": "انتهت صلاحية الجلسة الدخول",
