--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -1,6 +1,6 @@
 {
   "lang": "en",
-  "app_name": "النصيان للغاز",
+  "app_name": "SENAR",
   "sorry_something_went_wrong": "Sorry, something went wrong",
   "something_went_wrong_please_try_again": "Something went wrong. Please try again",
   "the_login_session_has_expired": "The login session has expired",
