Update configure_fingerprint.bin files for x86, x86_64, and arm64-v8a architectures

--- a/assets/translations/ar-SA.json
+++ b/assets/translations/ar-SA.json
@@ -42,14 +42,14 @@
   "edit_phone": "تغيير رقم الهاتف",
   "edit_the_phone_for_creating_the_account": "تغيير رقم الهاتف لانشاء الحساب",
   "new_phone": "رقم الهاتف الجديد",
-  "welcome_you": "مرحباً بك",
+  "welcome_you": "مرحبا بك",
   "don_t_miss_out_on_trying_the_app_with_its_many_diverse_features": "لا تفوّت تجربة التطبيق مع\n عدة مميزات متنوعة",
   "cover_all_cities": "تغطية كافة المدن",
   "verify_all_distributors": "توثيق جميع الموزعين",
   "varied_and_secure_payment": "دفع متنوع وآمن",
   "instant_support": "دعم فني فوري",
-  "star_now": "ابدأ الان",
-  "login_as_guest": "الدخول كضيف",
+  "star_now": "الدخول",
+  "login_as_guest": "ضيف",
   "live_tracking": "تتبع بشكل مباشر",
   "client": "عميل",
   "free_agent": "مندوب حر",
