feat(home): add "Coming Soon" popup and localization support
Implemented a new popup dialog to inform users about upcoming features, enhancing user experience. Added localization keys for "Coming Soon", "Service Not Available", and "OK" in both Arabic and English translations. This ensures that users are informed about the availability of services in a user-friendly manner.

--- a/assets/translations/ar-SA.json
+++ b/assets/translations/ar-SA.json
@@ -290,5 +290,8 @@
   "guest":"زائر",
   "payment_failed": "فشل الدفع. يرجى المحاولة مرة أخرى.",
   "online_payment":"الدفع الإلكتروني",
-  "try_again":"حاول مرة اخرى"
+  "try_again":"حاول مرة اخرى",
+  "coming_soon": "قريباً",
+  "service_not_available": "نعمل حالياً على توفير هذه الخدمة لكم، ترقبوا إطلاقها قريباً!",
+  "ok": "موافق"
 }
