fix(translations): update Arabic translations for logout and car info
Revised the Arabic translations for the logout and car info terms to improve clarity and accuracy. The logout term has been simplified to "خروج" and the car info term has been updated to "وثائق", enhancing the overall user experience for Arabic-speaking users.

--- a/assets/translations/ar-SA.json
+++ b/assets/translations/ar-SA.json
@@ -83,7 +83,7 @@
   "terms_and_conditions": "الشروط والاحكام",
   "privacy_policy": "سياسة الخصوصية",
   "faq": "الأسئلة الشائعة",
-  "logout": "تسجيل الخروج",
+  "logout": "خروج",
   "edit_profile": "تعديل الحساب",
   "change_password": "تغيير كلمة المرور",
   "current_password": "كلمة المرور الحالية",
@@ -96,8 +96,8 @@
   "choose": "اختر {}",
   "orders_count": "عدد الطلبات",
   "wallet": "المحفظة",
-  "car_info": "معلومات السيارة",
-  "profits": "الأرباح",
+  "car_info": "وثائق",
+  "profits": "مالية",
   "please_enter_the_information": "قم بادخال البيانات",
   "your_message": "رسالتك",
   "please_enter_your_message": "قم بادخال رسالتك",
