feat(translations): add new localization keys for profile items
Added new localization keys for various profile items including information, offers, financial, join, switch account, and exit in both Arabic and English translations. This enhancement improves the localization support and user experience for Arabic-speaking users.

--- a/assets/translations/ar-SA.json
+++ b/assets/translations/ar-SA.json
@@ -293,5 +293,11 @@
   "try_again":"حاول مرة اخرى",
   "coming_soon": "قريباً",
   "service_not_available": "نعمل حالياً على توفير هذه الخدمة لكم، ترقبوا إطلاقها قريباً!",
-  "ok": "موافق"
+  "ok": "موافق",
+  "information": "معلومات",
+  "offers": "عروض",
+  "financial": "مالية",
+  "join": "انضمام",
+  "switch_account": "تحويل",
+  "exit": "خروج"
 }
