feat(translations): add new keys for order rejection functionality
Enhanced Arabic and English translations by adding keys for rejecting orders, including reasons for rejection and cancellation prompts. This update improves user experience by providing clearer options in the order management process.

--- a/assets/translations/ar-SA.json
+++ b/assets/translations/ar-SA.json
@@ -299,5 +299,9 @@
   "financial": "مالية",
   "join": "انضمام",
   "switch_account": "تحويل",
-  "exit": "خروج"
+  "exit": "خروج",
+  "reject_order": "رفض الطلب",
+  "reject_reason": "سبب الرفض",
+  "enter_reject_reason": "أدخل سبب الرفض هنا",
+  "cancel": "إلغاء"
 }
