feat(location): implement location availability check for address selection
Added functionality to check if a selected location is available for delivery within the address management feature. This includes updates to the AddressesCubit for handling location validation and UI adjustments in the PickLocationView to reflect the location status. Enhanced user experience by providing real-time feedback on location availability during address selection.

--- a/assets/translations/ar-SA.json
+++ b/assets/translations/ar-SA.json
@@ -170,17 +170,17 @@
   "central_gas_filling": "تعبئة الغاز المركزي",
   "exclusive_service": "خدمتنا حصرية",
   "exclusive_service_description": "خدمة تعبئة غاز مركزي هي حصرية لدى شركة الغاز و التصنيع الاهلية فقط.",
-  "select_your_location": "حدد موقعك",
+  "select_your_location": "اختر موقعك",
   "search_about_the_address": "ابحث عن العنوان",
   "saved_addresses": "العناوين المحفوظة",
   "place_name": "اسم المكان",
-  "full_address": "العنوان الكامل",
+  "full_address": "العنوان بالتفصيل",
   "description": "الوصف",
   "address_description": "وصف العنوان",
-  "address_added_successfully": "تم اضافة العنوان بنجاح",
-  "add_address_description": "اضافة وصف العنوان",
+  "address_added_successfully": "تم إضافة العنوان بنجاح",
+  "add_address_description": "إضافة وصف العنوان",
   "edit_address": "تعديل العنوان",
-  "are_you_want_to_delete_this_address": "هل تريد حذف هذا العنوان",
+  "are_you_want_to_delete_this_address": "هل تريد حذف هذا العنوان؟",
   "the_service": "الخدمة : ",
   "no_agent": "لا يوجد مندوب حتي الآن",
   "industrial_gas_factories": "مصانع الغاز الصناعية",
@@ -303,5 +303,20 @@
   "reject_order": "رفض الطلب",
   "reject_reason": "سبب الرفض",
   "enter_reject_reason": "أدخل سبب الرفض هنا",
-  "cancel": "إلغاء"
+  "cancel": "إلغاء",
+  "checking_location": "جاري التحقق من الموقع...",
+  "location_available": "الموقع متاح للتوصيل",
+  "location_not_available": "الموقع غير متاح للتوصيل",
+  "location_not_available_message": "عذراً، هذا الموقع غير مشمول في نطاق خدمة التوصيل لدينا",
+  "select_your_location": "اختر موقعك",
+  "add_address_description": "إضافة وصف العنوان",
+  "saved_addresses": "العناوين المحفوظة",
+  "add_new_address": "إضافة عنوان جديد",
+  "edit_address": "تعديل العنوان",
+  "address_description": "وصف العنوان",
+  "place_name": "اسم المكان",
+  "full_address": "العنوان بالتفصيل",
+  "description": "الوصف",
+  "address_added_successfully": "تم إضافة العنوان بنجاح",
+  "are_you_want_to_delete_this_address": "هل تريد حذف هذا العنوان؟"
 }
