--- a/assets/translations/ar-SA.json
+++ b/assets/translations/ar-SA.json
@@ -11,23 +11,23 @@
   "gallery": "المعرض",
   "yes": "نعم",
   "no": "لا",
-  "confirm": "تأكيد",
-  "login": "تسجيل الدخول",
+  "confirm": "دخول",
+  "login": "دخول",
   "phone_number": "رقم الهاتف",
   "password": "كلمة المرور",
-  "forgot_password": "نسيت كلمة المرور؟",
+  "forgot_password": "نسيت",
   "confirmation": "تأكيد",
   "dont_have_account": "ليس لديك حساب؟",
   "create_account": "انشاء حساب",
   "reset_password": "إعادة تعيين كلمة المرور",
   "val_is_required": "{} مطلوب/ة",
   "this_field": "هذا الحقل",
-  "the_phone_number_must_consist_of_val_numbers": "رقم الهاتف يجب أن يتكون من {} أرقام",
-  "the_password_must_not_be_less_than_8_numbers": "كلمة المرور يجب ان لا يكون اقل من ٨ رموز",
+  "the_phone_number_must_consist_of_val_numbers": " يجب أن {} أرقام",
+  "the_password_must_not_be_less_than_8_numbers": " يجب ان  تكون اكثر من ٨ رموز",
   "write_val": "اكتب {}",
   "select_val": "اختر {}",
   "country_code": "رمز الدولة",
-  "did_not_you_receive_the_code": "لم تستلم الكود؟",
+  "did_not_you_receive_the_code": "لم تستلم؟",
   "resend": "اعادة الارسال",
   "enter_email_reset_password": "اكتب البريد الالكتروني لاعادة تعيين كلمة المرور",
   "email": "البريد الالكتروني",
@@ -48,11 +48,11 @@
   "verify_all_distributors": "توثيق جميع الموزعين",
   "varied_and_secure_payment": "دفع متنوع وآمن",
   "instant_support": "دعم فني فوري",
-  "star_now": "الدخول",
+  "star_now": "دخول",
   "login_as_guest": "ضيف",
   "live_tracking": "تتبع بشكل مباشر",
   "client": "عميل",
-  "free_agent": "مندوب حر",
+  "free_agent": "ممثل",
   "user_type": "نوع المستخدم",
   "please_enter_this_information_to_continue_registering_and_enjoy_our_services": "يرجى إدخال هذه المعلومات لمواصلة التسجيل والاستمتاع بخدماتنا",
   "fullname": "الاسم الكامل",
