fix(translations): update Arabic translations for consistency and clarity
Modified several Arabic translation strings for improved clarity and consistency, including adjustments to required field messages and supplier terminology. These changes enhance the user experience by ensuring accurate and clear communication in the application.

--- a/assets/translations/ar-SA.json
+++ b/assets/translations/ar-SA.json
@@ -20,7 +20,7 @@
   "dont_have_account": "ليس لديك حساب؟",
   "create_account": "انشاء حساب",
   "reset_password": "إعادة تعيين كلمة المرور",
-  "val_is_required": "{} مطلوب/ة",
+  "val_is_required": " مطلوب",
   "this_field": "هذا الحقل",
   "the_phone_number_must_consist_of_val_numbers": " يجب أن {} أرقام",
   "the_password_must_not_be_less_than_8_numbers": " يجب ان  تكون اكثر من ٨ رموز",
@@ -123,11 +123,11 @@
   "distribution": "توزيع",
   "request_gas_now": "اطلب غاز الان",
   "factory": "مصنع",
-  "suppliers": "إمداد",
+  "suppliers": "امداد",
   "maintenance": "صيانة",
   "accessories": "لوازم",
   "fill": "تعبئة",
-  "reset": "إعادة",
+  "reset": "اعادة",
   "gas_distribution": "توزيع إسطوانات غاز",
   "gas_exchange": "خدمة توصيل وإستبدال جميع اسطوانات الغاز",
   "buy_or_refill_gas": "تعبئة او شراء اسطوانة",
