fix(translations): refine Arabic translation strings for gas services
Updated Arabic translations for gas services to enhance clarity and consistency. Changes include modifying the gas exchange and refill messages to better reflect their intended meanings, improving user understanding and experience.

--- a/assets/translations/ar-SA.json
+++ b/assets/translations/ar-SA.json
@@ -129,8 +129,8 @@
   "fill": "تعبئة",
   "reset": "اعادة",
   "gas_distribution": "توزيع إسطوانات غاز",
-  "gas_exchange": "خدمة توصيل وإستبدال جميع اسطوانات الغاز",
-  "buy_or_refill_gas": "تعبئة او شراء اسطوانة",
+  "gas_exchange": "خدمة توزيع الغاز",
+  "buy_or_refill_gas": "طلب",
   "sell_gas_to_companies": "خدمة بيع اسطواناتك عبر عرضها للتجار لدينا",
   "sell_gas": "بيع اسطوانة",
   "iron_cylinder": "اسطوانة حديد",
