fix(translations): correct Arabic translation for "coming soon" string
Updated the Arabic translation for the "coming soon" string from "قريباً" to "قريبا" to ensure consistency and accuracy in the application's language localization.

--- a/assets/translations/ar-SA.json
+++ b/assets/translations/ar-SA.json
@@ -291,7 +291,7 @@
   "payment_failed": "فشل الدفع. يرجى المحاولة مرة أخرى.",
   "online_payment":"الدفع الإلكتروني",
   "try_again":"حاول مرة اخرى",
-  "coming_soon": "قريباً",
+  "coming_soon": "قريبا",
   "service_not_available": "نعمل حالياً على توفير هذه الخدمة لكم، ترقبوا إطلاقها قريباً!",
   "ok": "موافق",
   "information": "معلومات",
