fix(translations): update Arabic translation for "profile" string
Changed the Arabic translation for "profile" from "الحساب الشخصي" to "الحساب" to ensure accuracy and consistency in the application's language localization.

--- a/assets/translations/ar-SA.json
+++ b/assets/translations/ar-SA.json
@@ -75,7 +75,7 @@
   "home": "الرئيسية",
   "orders": "الطلبات",
   "notifications": "الاشعارات",
-  "profile": "الحساب الشخصي",
+  "profile": "الحساب",
   "orders_history": "سجل الطلبات",
   "settings": "الاعدادات",
   "contact_us": "تواصل معنا",
