feat(svg): add delivery SVG icon and update user type model
Introduced a new SVG file for the delivery icon to enhance visual assets in the application. Updated the user type model to include icons for user types in the login view, improving the overall user interface and experience.

--- a/assets/translations/ar-SA.json
+++ b/assets/translations/ar-SA.json
@@ -33,9 +33,9 @@
   "email": "البريد الالكتروني",
   "send": "ارسال",
   "name": "الاسم",
-  "phone": "الهاتف",
+  "phone": "هاتف",
   "passwords_do_not_match": "كلمات المرور غير متشابهه",
-  "confirm_password": "تأكيد كلمة المرور",
+  "confirm_password": "تأكيد",
   "have_account": "لديك حساب؟",
   "password_changed_successfully": "تم تغيير كلمة المرور بنجاح",
   "enter_the_code_found_in_the_box_below_to_continue": "أدخل الرمز الموجود في المربع أدناه للمتابعة",
@@ -53,9 +53,9 @@
   "live_tracking": "تتبع بشكل مباشر",
   "client": "عميل",
   "free_agent": "ممثل",
-  "user_type": "نوع المستخدم",
+  "user_type": "",
   "please_enter_this_information_to_continue_registering_and_enjoy_our_services": "يرجى إدخال هذه المعلومات لمواصلة التسجيل والاستمتاع بخدماتنا",
-  "fullname": "الاسم الكامل",
+  "fullname": "اسم",
   "confirm_identity": "تاكيد الهوية",
   "we_have_sent_a_verification_code_consisting_of_4_digits_to": "أرسلنا رمز تحقق مكون من 4 أرقام إلى",
   "please_enter_the_phone_number_below_to_reset_your_password": "يرجى إدخال رقم الهاتف أدناه لاستعادة كلمة المرور الخاصة بك.",
