refactor(translations, ui): update Arabic translations and enhance UI styling
Modified Arabic translations for several strings to improve clarity and consistency. Updated UI components in the pin code and verification views by adjusting color schemes and text styles for better readability and aesthetics.

--- a/assets/translations/ar-SA.json
+++ b/assets/translations/ar-SA.json
@@ -28,7 +28,7 @@
   "select_val": "اختر {}",
   "country_code": "رمز الدولة",
   "did_not_you_receive_the_code": "لم تستلم؟",
-  "resend": "اعادة الارسال",
+  "resend": "اعادة",
   "enter_email_reset_password": "اكتب البريد الالكتروني لاعادة تعيين كلمة المرور",
   "email": "البريد الالكتروني",
   "send": "ارسال",
@@ -39,7 +39,7 @@
   "have_account": "لديك حساب؟",
   "password_changed_successfully": "تم تغيير كلمة المرور بنجاح",
   "enter_the_code_found_in_the_box_below_to_continue": "أدخل الرمز الموجود في المربع أدناه للمتابعة",
-  "edit_phone": "تغيير رقم الهاتف",
+  "edit_phone": "تغيير",
   "edit_the_phone_for_creating_the_account": "تغيير رقم الهاتف لانشاء الحساب",
   "new_phone": "رقم الهاتف الجديد",
   "welcome_you": "مرحبا",
@@ -56,8 +56,8 @@
   "user_type": "",
   "please_enter_this_information_to_continue_registering_and_enjoy_our_services": "يرجى إدخال هذه المعلومات لمواصلة التسجيل والاستمتاع بخدماتنا",
   "fullname": "اسم",
-  "confirm_identity": "تاكيد الهوية",
-  "we_have_sent_a_verification_code_consisting_of_4_digits_to": "أرسلنا رمز تحقق مكون من 4 أرقام إلى",
+  "confirm_identity": "تأكيد",
+  "we_have_sent_a_verification_code_consisting_of_4_digits_to": "ارسلنا لـ ",
   "please_enter_the_phone_number_below_to_reset_your_password": "يرجى إدخال رقم الهاتف أدناه لاستعادة كلمة المرور الخاصة بك.",
   "complete_registration": "استكمال التسجيل",
   "pick_image": "اختيار الصورة",
