refactor(translations, ui): update Arabic translations and implement coming soon popup
Revised Arabic translations for several UI elements to enhance clarity and consistency. Added a new function to display a "coming soon" popup in the profile section, improving user interaction when accessing unavailable features.

--- a/assets/translations/ar-SA.json
+++ b/assets/translations/ar-SA.json
@@ -73,11 +73,11 @@
   "request_to_create_an_account": "تم طلب إنشاء حساب جديد",
   "request_to_create_an_account_pending_admin_approval": "تم طلب إنشاء حساب وفي إنتظار قبول الإدارة سيتم إرسال رسالة بالقبول",
   "home": "الرئيسية",
-  "orders": "الطلبات",
-  "notifications": "الاشعارات",
-  "profile": "الحساب",
+  "orders": "طلبات",
+  "notifications": "اشعارات",
+  "profile": "حساب",
   "orders_history": "سجل الطلبات",
-  "settings": "الاعدادات",
+  "settings": "اعدادات",
   "contact_us": "تواصل معنا",
   "about_us": "من نحن",
   "terms_and_conditions": "الشروط والاحكام",
