refactor(translations): update Arabic translations for clarity and consistency
Revised several Arabic translations to enhance clarity and brevity, improving the overall user experience. Adjusted terms for better alignment with common usage, ensuring a more intuitive interface for Arabic-speaking users.

--- a/assets/translations/ar-SA.json
+++ b/assets/translations/ar-SA.json
@@ -78,21 +78,21 @@
   "profile": "حساب",
   "orders_history": "سجل الطلبات",
   "settings": "اعدادات",
-  "contact_us": "تواصل معنا",
-  "about_us": "من نحن",
-  "terms_and_conditions": "الشروط والاحكام",
-  "privacy_policy": "سياسة الخصوصية",
-  "faq": "الأسئلة الشائعة",
+  "contact_us": "تواصل",
+  "about_us": "سينار",
+  "terms_and_conditions": "شروط",
+  "privacy_policy": "خصوصية",
+  "faq": "اسئلة",
   "logout": "خروج",
   "edit_profile": "تعديل الحساب",
   "change_password": "تغيير كلمة المرور",
   "current_password": "كلمة المرور الحالية",
   "update_phone": "تحديث رقم الهاتف",
   "update_phone_successfully": "تم تحديث رقم الهاتف بنجاح",
-  "language": "اللغة",
-  "arabic": "العربية",
+  "language": "للغة",
+  "arabic": "عربي",
   "english": "English",
-  "delete_account": "حذف الحساب",
+  "delete_account": "تعطيل",
   "choose": "اختر {}",
   "orders_count": "عدد الطلبات",
   "wallet": "المحفظة",
