refactor(translations, ui): update Arabic translations and improve settings UI
Revised Arabic translations for clarity and consistency, including changes to language labels and selection prompts. Enhanced the settings UI by adjusting the display of language options, ensuring a more intuitive experience for Arabic-speaking users.

--- a/assets/translations/ar-SA.json
+++ b/assets/translations/ar-SA.json
@@ -89,11 +89,11 @@
   "current_password": "كلمة المرور الحالية",
   "update_phone": "تحديث رقم الهاتف",
   "update_phone_successfully": "تم تحديث رقم الهاتف بنجاح",
-  "language": "للغة",
+  "language": "لغة",
   "arabic": "عربي",
   "english": "English",
   "delete_account": "تعطيل",
-  "choose": "اختر {}",
+  "choose": "اختر",
   "orders_count": "عدد الطلبات",
   "wallet": "المحفظة",
   "car_info": "وثائق",
