refactor(translations, ui): update Arabic translations and enhance forget password UI
Revised Arabic translations for improved clarity, including updates to phone number and password reset terms. Enhanced the forget password UI by initializing the default country code to Saudi Arabia, adjusting the layout, and adding a suffix icon for the phone number input, improving user experience and interaction.

--- a/assets/translations/ar-SA.json
+++ b/assets/translations/ar-SA.json
@@ -13,13 +13,13 @@
   "no": "لا",
   "confirm": "دخول",
   "login": "دخول",
-  "phone_number": "رقم الهاتف",
+  "phone_number": "هاتف",
   "password": "كلمة المرور",
   "forgot_password": "نسيت",
   "confirmation": "تأكيد",
   "dont_have_account": "ليس لديك حساب؟",
   "create_account": "انشاء حساب",
-  "reset_password": "إعادة تعيين كلمة المرور",
+  "reset_password": "تعيين",
   "val_is_required": " مطلوب",
   "this_field": "هذا الحقل",
   "the_phone_number_must_consist_of_val_numbers": " يجب أن {} أرقام",
