refactor(contact_us, translations): update Arabic translations and enhance contact us form layout
Revised Arabic translations for improved clarity, including changes to the terms for "name" and "please enter the information." Refactored the contact us form layout by streamlining input fields and enhancing button styling for better user interaction and experience.

--- a/assets/translations/ar-SA.json
+++ b/assets/translations/ar-SA.json
@@ -32,7 +32,7 @@
   "enter_email_reset_password": "اكتب البريد الالكتروني لاعادة تعيين كلمة المرور",
   "email": "البريد الالكتروني",
   "send": "ارسال",
-  "name": "الاسم",
+  "name": "اسم",
   "phone": "هاتف",
   "passwords_do_not_match": "كلمات المرور غير متشابهه",
   "confirm_password": "تأكيد",
@@ -98,7 +98,7 @@
   "wallet": "المحفظة",
   "car_info": "وثائق",
   "profits": "مالية",
-  "please_enter_the_information": "قم بادخال البيانات",
+  "please_enter_the_information": "رسالة",
   "your_message": "رسالتك",
   "please_enter_your_message": "قم بادخال رسالتك",
   "no_faq": "لا يوجد أسئلة شائعة",
