fix(translations): update Arabic translation for gas exchange service
Revised the Arabic translation for "gas_exchange" to improve clarity and accuracy. The new translation enhances the user experience by providing a more precise description of the service offered.

--- a/assets/translations/ar-SA.json
+++ b/assets/translations/ar-SA.json
@@ -129,7 +129,7 @@
   "fill": "تعبئة",
   "reset": "اعادة",
   "gas_distribution": "توزيع إسطوانات غاز",
-  "gas_exchange": "خدمة توزيع الغاز",
+  "gas_exchange": " توزيع اسطوانات غاز",
   "buy_or_refill_gas": "طلب",
   "sell_gas_to_companies": "خدمة بيع اسطواناتك عبر عرضها للتجار لدينا",
   "sell_gas": "بيع اسطوانة",
