refactor(translations): simplify gas cylinder names in Arabic localization
Updated the Arabic translations for gas cylinder names by shortening "اسطوانة حديد" to "حديد" and "اسطوانة فابير" to "فابير". This change enhances clarity and conciseness in the user interface.

--- a/assets/translations/ar-SA.json
+++ b/assets/translations/ar-SA.json
@@ -133,8 +133,8 @@
   "buy_or_refill_gas": "طلب",
   "sell_gas_to_companies": "خدمة بيع اسطواناتك عبر عرضها للتجار لدينا",
   "sell_gas": "بيع اسطوانة",
-  "iron_cylinder": "اسطوانة حديد",
-  "fiber_cylinder": "اسطوانة فابير",
+  "iron_cylinder": "حديد",
+  "fiber_cylinder": "فابير",
   "additional_options": "خيارات اضافية",
   "iron_cylinder_service_subtitle": "( إستبدال أو شراء ) إعادة تعبئة اسطوانة غاز حديد سعة الاسطوانه 11 كجم",
   "fiber_cylinder_service_subtitle": "( إستبدال أو شراء ) إعادة تعبئة اسطوانة غاز فايبر سعة الاسطوانه 11 كجم",
