refactor(translations): update Arabic translation for additional options
Changed the Arabic translation for "additional_options" from "خيارات اضافية" to "اضف" to enhance clarity and conciseness in the user interface. This update aligns with previous efforts to simplify translations for better user experience.

--- a/assets/translations/ar-SA.json
+++ b/assets/translations/ar-SA.json
@@ -135,7 +135,7 @@
   "sell_gas": "بيع اسطوانة",
   "iron_cylinder": "حديد",
   "fiber_cylinder": "فابير",
-  "additional_options": "خيارات اضافية",
+  "additional_options": "اضف",
   "iron_cylinder_service_subtitle": "( إستبدال أو شراء ) إعادة تعبئة اسطوانة غاز حديد سعة الاسطوانه 11 كجم",
   "fiber_cylinder_service_subtitle": "( إستبدال أو شراء ) إعادة تعبئة اسطوانة غاز فايبر سعة الاسطوانه 11 كجم",
   "order_now": "اطلب الان",
