refactor(translations): update Arabic translations for order details and cancel button
Modified the Arabic translations in the order details and billing components to enhance clarity and consistency. The "order_details" key was shortened for brevity, and the cancel button text was updated to a direct translation, improving localization and user experience.

--- a/assets/translations/ar-SA.json
+++ b/assets/translations/ar-SA.json
@@ -139,7 +139,7 @@
   "iron_cylinder_service_subtitle": "( إستبدال أو شراء ) إعادة تعبئة اسطوانة غاز حديد سعة الاسطوانه 11 كجم",
   "fiber_cylinder_service_subtitle": "( إستبدال أو شراء ) إعادة تعبئة اسطوانة غاز فايبر سعة الاسطوانه 11 كجم",
   "order_now": "اطلب الان",
-  "order_details": "تفاصيل الطلب",
+  "order_details": "تفاصيل",
   "my_address": "موقعي",
   "add_new_address": "اضافة عنوان جديد",
   "service_type": "نوع الخدمة",
