refactor(translations): correct Arabic translations for cancel reason and account deactivation message
Updated the Arabic translations for the cancel reason and account deactivation message to enhance clarity and accuracy. The changes improve localization and ensure a better user experience in the application.

--- a/assets/translations/ar-SA.json
+++ b/assets/translations/ar-SA.json
@@ -271,8 +271,8 @@
   "available":"متاح",
   "order_delivered_successfully":"تم تسليم الطلب بنجاح",
   "cancel_order":"الغاء الطلب",
-  "cancel_reason":"سبب الغاء",
-  "account_deactivated_msg":"تم تعطيل حسابك. يرجى التواصل مع الادارة خلال 30 يومًا قبل الحذف الدائم",
+  "cancel_reason":"الغاء",
+  "account_deactivated_msg":"تم تعطيل حسابك. يرجى التواصل مع الادارة خلال 30 يومًا قبل الحذف الدائم",
   "upload_required_images":"يرجى تحميل الصور المطلوبة",
   "uploading_images":"يتم تحميل الصور الآن",
   "there_are_images_not_uploaded":"هناك صور غير محملة",
