feat(order_details): add view option for address visibility in order details
Enhanced the OrderDetailsView by introducing a new "view" option for displaying addresses. Updated the layout to improve readability and user interaction, including the addition of SVG icons for better visual representation. Also, made minor adjustments to text styles for consistency across the UI.

--- a/assets/translations/ar-SA.json
+++ b/assets/translations/ar-SA.json
@@ -322,5 +322,6 @@
   "delivery_person": "المندوب",
   "retry": "إعادة المحاولة",
   "tracking_delivery": "تتبع التوصيل",
-  "live_order_tracking": "تتبع الطلب المباشر"
+  "live_order_tracking": "تتبع الطلب المباشر",
+  "view": "عرض"
 }
