feat(translations): add new keys for order price and delivery in Arabic and English
Updated translation files to include new keys for "order_price" and "delivery" in both Arabic and English. This enhancement improves localization support for the application, ensuring users have access to relevant terms in their preferred language.

--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -312,5 +312,7 @@
   "retry": "Retry",
   "tracking_delivery": "Tracking Delivery",
   "live_order_tracking": "Live Order Tracking",
-  "view": "View"
+  "view": "View",
+  "order_price": "Order Price",
+  "delivery": "Delivery"
 }
