--- a/assets/translations/ar-SA.json
+++ b/assets/translations/ar-SA.json
@@ -322,6 +322,8 @@
   "delivery_person": "المندوب",
   "retry": "إعادة المحاولة",
   "tracking_delivery": "تتبع التوصيل",
-  "live_order_tracking": "تتبع الطلب المباشر",
-  "view": "عرض"
+  "live_order_tracking": "تتبع الطلب",
+  "view": "عرض",
+  "order_price": "قيمة الطلب",
+  "delivery": "توصيل"
 }
